// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Side Navigation Complex (compact) 1`] = `
<div
  class="fd-side-nav"
>
  
    
  <a
    class="fd-side-nav__skip-link"
    href="#content"
  >
    Skip navigation
  </a>
  
    
  <div
    class="fd-side-nav__group-header"
    id="EX500H1"
  >
    
        Group Header 1
    
  </div>
  
    
  <nav
    aria-label="Main Menu"
    class="fd-side-nav__main-navigation"
  >
    
        
    <ul
      aria-labelledby="EX500H1"
      class="fd-nested-list fd-nested-list--compact"
    >
      
            
      <li
        class="fd-nested-list__item"
      >
        
                
        <a
          class="fd-nested-list__link"
          href="#"
        >
          
                    
          <i
            class="fd-nested-list__icon sap-icon--home"
            role="presentation"
          />
          
                    
          <span
            class="fd-nested-list__title"
          >
            Level 1 Item
          </span>
          
                
        </a>
        
            
      </li>
      
            
      <li
        class="fd-nested-list__item"
      >
        
                
        <a
          class="fd-nested-list__link is-selected"
          href="#"
        >
          
                    
          <i
            class="fd-nested-list__icon sap-icon--calendar"
            role="presentation"
          />
          
                    
          <span
            class="fd-nested-list__title"
          >
            Level 1 Item
          </span>
          
                
        </a>
        
            
      </li>
      
            
      <li
        class="fd-nested-list__item"
      >
        
                
        <div
          class="fd-nested-list__content has-child"
        >
          
                    
          <a
            class="fd-nested-list__link"
            href="#"
          >
            
                        
            <i
              class="fd-nested-list__icon sap-icon--employee"
              role="presentation"
            />
            
                        
            <span
              class="fd-nested-list__title"
            >
              Level 1 Item
            </span>
            
                    
          </a>
          
                    
          <button
            aria-controls="EX500L2"
            aria-expanded="false"
            aria-haspopup="true"
            aria-label="Expand submenu"
            class="fd-button fd-nested-list__button"
          >
            
                        
            <i
              class="sap-icon--navigation-right-arrow"
              role="presentation"
            />
                
                    
          </button>
          
                
        </div>
        
                
        <ul
          aria-hidden="true"
          class="fd-nested-list fd-nested-list--text-only level-2"
          id="EX500L2"
        >
          
                    
          <li
            class="fd-nested-list__item"
          >
            
                        
            <a
              class="fd-nested-list__link"
              href="#"
            >
              
                            
              <span
                class="fd-nested-list__title"
              >
                Level 2 Item
              </span>
              
                        
            </a>
            
                    
          </li>
          
                    
          <li
            class="fd-nested-list__item"
          >
            
                        
            <a
              class="fd-nested-list__link"
              href="#"
            >
              
                            
              <span
                class="fd-nested-list__title"
              >
                Level 2 Item
              </span>
              
                        
            </a>
            
                    
          </li>
          
                    
          <li
            class="fd-nested-list__item"
          >
            
                        
            <a
              class="fd-nested-list__link"
              href="#"
            >
              
                            
              <span
                class="fd-nested-list__title"
              >
                Level 2 Item
              </span>
              
                        
            </a>
            
                    
          </li>
          
                
        </ul>
        
            
      </li>
      
            
      <li
        class="fd-nested-list__item"
      >
        
                
        <a
          class="fd-nested-list__link"
          href="#"
        >
          
                    
          <i
            class="fd-nested-list__icon sap-icon--activities"
            role="presentation"
          />
          
                    
          <span
            class="fd-nested-list__title"
          >
            Level 1 Item
          </span>
          
                
        </a>
        
            
      </li>
      
        
    </ul>
    
        
    <div
      class="fd-side-nav__group-header"
      id="EX500H2"
    >
      
                Group Header 2
        
    </div>
    
        
    <ul
      aria-labelledby="EX500H2"
      class="fd-nested-list fd-nested-list--compact"
    >
      
            
      <li
        class="fd-nested-list__item"
      >
        
                
        <a
          class="fd-nested-list__link"
          href="#"
        >
          
                    
          <i
            class="fd-nested-list__icon sap-icon--bar-chart"
            role="presentation"
          />
          
                    
          <span
            class="fd-nested-list__title"
          >
            Level 1 Item
          </span>
          
                
        </a>
        
            
      </li>
      
            
      <li
        class="fd-nested-list__item"
      >
        
                
        <a
          class="fd-nested-list__link"
          href="#"
        >
          
                    
          <span
            class="fd-nested-list__title"
          >
            Level 1 Item
          </span>
          
                
        </a>
        
            
      </li>
      
        
    </ul>
    
    
  </nav>
  
    
  <nav
    aria-label="Utility Menu"
    class="fd-side-nav__utility"
  >
    
        
    <ul
      aria-label="Utility Menu"
      class="fd-nested-list fd-nested-list--compact"
    >
      
            
      <li
        class="fd-nested-list__item"
      >
        
                
        <a
          class="fd-nested-list__link"
          href="#"
        >
          
                    
          <i
            class="fd-nested-list__icon sap-icon--compare"
            role="presentation"
          />
          
                    
          <span
            class="fd-nested-list__title"
          >
            Level 1 Item
          </span>
          
                
        </a>
        
            
      </li>
      
            
      <li
        class="fd-nested-list__item"
      >
        
                
        <a
          class="fd-nested-list__link"
          href="#"
        >
          
                    
          <i
            class="fd-nested-list__icon sap-icon--chain-link"
            role="presentation"
          />
          
                    
          <span
            class="fd-nested-list__title"
          >
            Level 1 Item
          </span>
          
                
        </a>
        
            
      </li>
      
        
    </ul>
    
    
  </nav>
  

</div>
`;

exports[`Storyshots Components/Side Navigation Complex 1`] = `
<div
  class="fd-side-nav"
>
  
    
  <a
    class="fd-side-nav__skip-link"
    href="#content"
  >
    Skip navigation
  </a>
  
    
  <div
    class="fd-side-nav__group-header"
    id="EX400H1"
  >
    
        Group Header 1
    
  </div>
  
    
  <nav
    aria-label="Main Menu"
    class="fd-side-nav__main-navigation"
  >
    
        
    <ul
      aria-labelledby="EX400H1"
      class="fd-nested-list "
    >
      
            
      <li
        class="fd-nested-list__item"
      >
        
                
        <a
          class="fd-nested-list__link"
          href="#"
        >
          
                    
          <i
            class="fd-nested-list__icon sap-icon--home"
            role="presentation"
          />
          
                    
          <span
            class="fd-nested-list__title"
          >
            Level 1 Item
          </span>
          
                
        </a>
        
            
      </li>
      
            
      <li
        class="fd-nested-list__item"
      >
        
                
        <a
          class="fd-nested-list__link"
          href="#"
        >
          
                    
          <i
            class="fd-nested-list__icon sap-icon--calendar"
            role="presentation"
          />
          
                    
          <span
            class="fd-nested-list__title"
          >
            Level 1 Item
          </span>
          
                
        </a>
        
            
      </li>
      
            
      <li
        class="fd-nested-list__item"
      >
        
                
        <div
          class="fd-nested-list__content is-selected has-child"
        >
          
                    
          <a
            class="fd-nested-list__link"
            href="#"
          >
            
                        
            <i
              class="fd-nested-list__icon sap-icon--employee"
              role="presentation"
            />
            
                        
            <span
              class="fd-nested-list__title"
            >
              Level 1 Item
            </span>
            
                    
          </a>
          
                    
          <button
            aria-controls="EX400L2"
            aria-expanded="false"
            aria-haspopup="true"
            aria-label="Expand submenu"
            class="fd-button fd-nested-list__button"
          >
            
                        
            <i
              class="sap-icon--navigation-right-arrow"
              role="presentation"
            />
                
                    
          </button>
          
                
        </div>
        
                
        <ul
          aria-hidden="true"
          class="fd-nested-list fd-nested-list--text-only level-2"
          id="EX400L2"
        >
          
                    
          <li
            class="fd-nested-list__item"
          >
            
                        
            <a
              class="fd-nested-list__link"
              href="#"
            >
              
                            
              <span
                class="fd-nested-list__title"
              >
                Level 2 Item
              </span>
              
                        
            </a>
            
                    
          </li>
          
                    
          <li
            class="fd-nested-list__item"
          >
            
                        
            <a
              class="fd-nested-list__link is-selected"
              href="#"
            >
              
                            
              <span
                class="fd-nested-list__title"
              >
                Level 2 Item
              </span>
              
                        
            </a>
            
                    
          </li>
          
                    
          <li
            class="fd-nested-list__item"
          >
            
                        
            <a
              class="fd-nested-list__link"
              href="#"
            >
              
                            
              <span
                class="fd-nested-list__title"
              >
                Level 2 Item
              </span>
              
                        
            </a>
            
                    
          </li>
          
                
        </ul>
        
            
      </li>
      
            
      <li
        class="fd-nested-list__item"
      >
        
                
        <a
          class="fd-nested-list__link"
          href="#"
        >
          
                    
          <i
            class="fd-nested-list__icon sap-icon--activities"
            role="presentation"
          />
          
                    
          <span
            class="fd-nested-list__title"
          >
            Level 1 Item
          </span>
          
                
        </a>
        
            
      </li>
      
        
    </ul>
    
        
    <div
      class="fd-side-nav__group-header"
      id="EX400H2"
    >
      
            Group Header 2
        
    </div>
    
        
    <ul
      aria-labelledby="EX400H2"
      class="fd-nested-list"
    >
      
            
      <li
        class="fd-nested-list__item"
      >
        
                
        <a
          class="fd-nested-list__link"
          href="#"
        >
          
                    
          <i
            class="fd-nested-list__icon sap-icon--bar-chart"
            role="presentation"
          />
          
                    
          <span
            class="fd-nested-list__title"
          >
            Level 1 Item
          </span>
          
                
        </a>
        
            
      </li>
      
            
      <li
        class="fd-nested-list__item"
      >
        
                
        <a
          class="fd-nested-list__link"
          href="#"
        >
          
                    
          <span
            class="fd-nested-list__title"
          >
            Level 1 Item
          </span>
          
                
        </a>
        
            
      </li>
      
        
    </ul>
    
    
  </nav>
  
    
  <nav
    aria-label="Utility Menu"
    class="fd-side-nav__utility"
  >
    
        
    <ul
      aria-label="Utility Menu"
      class="fd-nested-list"
    >
      
            
      <li
        class="fd-nested-list__item"
      >
        
                
        <a
          class="fd-nested-list__link"
          href="#"
        >
          
                    
          <i
            class="fd-nested-list__icon sap-icon--compare"
            role="presentation"
          />
          
                    
          <span
            class="fd-nested-list__title"
          >
            Level 1 Item
          </span>
          
                
        </a>
        
            
      </li>
      
            
      <li
        class="fd-nested-list__item"
      >
        
                
        <a
          class="fd-nested-list__link"
          href="#"
        >
          
                    
          <i
            class="fd-nested-list__icon sap-icon--chain-link"
            role="presentation"
          />
          
                    
          <span
            class="fd-nested-list__title"
          >
            Level 1 Item
          </span>
          
                
        </a>
        
            
      </li>
      
        
    </ul>
    
    
  </nav>
  

</div>
`;

exports[`Storyshots Components/Side Navigation Condensed (compact) 1`] = `
<nav
  class="fd-side-nav fd-side-nav--condensed"
>
  
    
  <a
    class="fd-side-nav__skip-link"
    href="#content"
  >
    Skip navigation
  </a>
  
    
  <div
    class="fd-side-nav__main-navigation"
  >
    
        
    <ul
      class="fd-nested-list fd-nested-list--compact"
    >
      
            
      <li
        class="fd-nested-list__item"
      >
        
                
        <a
          class="fd-nested-list__link"
          href="#"
        >
          
                    
          <i
            class="fd-nested-list__icon sap-icon--home"
            role="presentation"
          />
          
                    
          <span
            class="fd-nested-list__title"
          >
            Level 1 Item
          </span>
          
                
        </a>
        
            
      </li>
      
            
      <li
        class="fd-nested-list__item"
      >
        
                
        <a
          class="fd-nested-list__link"
          href="#"
        >
          
                    
          <i
            class="fd-nested-list__icon sap-icon--calendar"
            role="presentation"
          />
          
                    
          <span
            class="fd-nested-list__title"
          >
            Level 1 Item
          </span>
          
                
        </a>
        
            
      </li>
      
            
      <li
        class="fd-nested-list__item"
      >
        
                
        <div
          class="fd-nested-list__content is-selected has-child"
        >
          
                    
          <button
            aria-controls="EX600L2"
            aria-expanded="false"
            aria-haspopup="true"
            aria-label="Expand submenu"
            class="fd-nested-list__link"
          >
            
                        
            <i
              class="fd-nested-list__icon sap-icon--employee"
              role="presentation"
            />
            
                        
            <span
              class="fd-nested-list__title"
            >
              Level 1 Item
            </span>
            
                    
          </button>
          
                
        </div>
        
            
      </li>
      
            
      <li
        class="fd-nested-list__item"
      >
        
                
        <a
          class="fd-nested-list__link"
          href="#"
        >
          
                    
          <i
            class="fd-nested-list__icon sap-icon--activities"
            role="presentation"
          />
          
                    
          <span
            class="fd-nested-list__title"
          >
            Level 1 Item
          </span>
          
                
        </a>
        
            
      </li>
      
            
      <li
        class="fd-nested-list__item"
      >
        
                
        <a
          class="fd-nested-list__link"
          href="#"
        >
          
                    
          <i
            class="fd-nested-list__icon sap-icon--bar-chart"
            role="presentation"
          />
          
                    
          <span
            class="fd-nested-list__title"
          >
            Level 1 Item
          </span>
          
                
        </a>
        
            
      </li>
      
        
    </ul>
    
    
  </div>
  
    
  <div
    class="fd-side-nav__utility"
  >
    
        
    <ul
      aria-label="Utility Menu"
      class="fd-nested-list fd-nested-list--compact"
    >
      
            
      <li
        class="fd-nested-list__item"
      >
        
                
        <a
          class="fd-nested-list__link"
          href="#"
        >
          
                    
          <i
            class="fd-nested-list__icon sap-icon--compare"
            role="presentation"
          />
          
                    
          <span
            class="fd-nested-list__title"
          >
            Level 1 Item
          </span>
          
                
        </a>
        
            
      </li>
      
            
      <li
        class="fd-nested-list__item"
      >
        
                
        <a
          class="fd-nested-list__link"
          href="#"
        >
          
                    
          <i
            class="fd-nested-list__icon sap-icon--chain-link"
            role="presentation"
          />
          
                    
          <span
            class="fd-nested-list__title"
          >
            Level 1 Item
          </span>
          
                
        </a>
        
            
      </li>
      
        
    </ul>
    
    
  </div>
  

</nav>
`;

exports[`Storyshots Components/Side Navigation Condensed 1`] = `
<nav
  class="fd-side-nav fd-side-nav--condensed"
>
  
    
  <a
    class="fd-side-nav__skip-link"
    href="#content"
  >
    Skip navigation
  </a>
  
    
  <div
    class="fd-side-nav__main-navigation"
  >
    
        
    <ul
      class="fd-nested-list"
    >
      
            
      <li
        class="fd-nested-list__item"
      >
        
                
        <a
          class="fd-nested-list__link"
          href="#"
        >
          
                    
          <i
            aria-label="Level 1 Item"
            class="fd-nested-list__icon sap-icon--home"
          />
          
                    
          <span
            class="fd-nested-list__title"
          >
            Level 1 Item
          </span>
          
                
        </a>
        
            
      </li>
      
            
      <li
        class="fd-nested-list__item"
      >
        
                
        <a
          class="fd-nested-list__link"
          href="#"
        >
          
                    
          <i
            aria-label="Level 1 Item"
            class="fd-nested-list__icon sap-icon--calendar"
          />
          
                    
          <span
            class="fd-nested-list__title"
          >
            Level 1 Item
          </span>
          
                
        </a>
        
            
      </li>
      
            
      <li
        class="fd-nested-list__item"
      >
        
                
        <div
          class="fd-nested-list__content is-selected has-child"
        >
          
                    
          <button
            aria-controls="EX500L2"
            aria-expanded="false"
            aria-haspopup="true"
            aria-label="Expand submenu"
            class="fd-nested-list__link"
          >
            
                        
            <i
              class="fd-nested-list__icon sap-icon--employee"
              role="presentation"
            />
            
                        
            <span
              class="fd-nested-list__title"
            >
              Level 1 Item
            </span>
            
                    
          </button>
          
                
        </div>
        
            
      </li>
      
            
      <li
        class="fd-nested-list__item"
      >
        
                
        <a
          class="fd-nested-list__link"
          href="#"
        >
          
                    
          <i
            aria-label="Level 1 Item"
            class="fd-nested-list__icon sap-icon--activities"
          />
          
                    
          <span
            class="fd-nested-list__title"
          >
            Level 1 Item
          </span>
          
                
        </a>
        
            
      </li>
      
            
      <li
        class="fd-nested-list__item"
      >
        
                
        <a
          class="fd-nested-list__link"
          href="#"
        >
          
                    
          <i
            aria-label="Level 1 Item"
            class="fd-nested-list__icon sap-icon--bar-chart"
          />
          
                    
          <span
            class="fd-nested-list__title"
          >
            Level 1 Item
          </span>
          
                
        </a>
        
            
      </li>
      
        
    </ul>
    
    
  </div>
  
    
  <div
    aria-label="Utility Menu"
    class="fd-side-nav__utility"
  >
    
        
    <ul
      class="fd-nested-list"
    >
      
            
      <li
        class="fd-nested-list__item"
      >
        
                
        <a
          class="fd-nested-list__link"
          href="#"
        >
          
                    
          <i
            aria-label="Level 1 Item"
            class="fd-nested-list__icon sap-icon--compare"
          />
          
                    
          <span
            class="fd-nested-list__title"
          >
            Level 1 Item
          </span>
          
                
        </a>
        
            
      </li>
      
            
      <li
        class="fd-nested-list__item"
      >
        
                
        <a
          class="fd-nested-list__link"
          href="#"
        >
          
                    
          <i
            aria-label="Level 1 Item"
            class="fd-nested-list__icon sap-icon--chain-link"
          />
          
                    
          <span
            class="fd-nested-list__title"
          >
            Level 1 Item
          </span>
          
                
        </a>
        
            
      </li>
      
        
    </ul>
    
    
  </div>
  

</nav>
`;

exports[`Storyshots Components/Side Navigation Default 1`] = `
<div
  class="fd-side-nav"
>
  
    
  <a
    class="fd-side-nav__skip-link"
    href="#content"
  >
    Skip navigation
  </a>
  
    
  <nav
    aria-label="Main Menu"
    class="fd-side-nav__main-navigation"
  >
    
        
    <ul
      aria-label="Main Menu"
      class="fd-nested-list fd-nested-list--text-only"
    >
      
            
      <li
        class="fd-nested-list__item"
      >
        
                
        <a
          class="fd-nested-list__link"
        >
          
                    
          <span
            class="fd-nested-list__title"
          >
            Level 1 Item
          </span>
          
                
        </a>
        
            
      </li>
      
            
      <li
        class="fd-nested-list__item"
      >
        
                
        <a
          class="fd-nested-list__link is-selected"
        >
          
                    
          <span
            class="fd-nested-list__title"
          >
            Level 1 Item
          </span>
          
                
        </a>
        
            
      </li>
      
            
      <li
        class="fd-nested-list__item"
      >
        
                
        <a
          class="fd-nested-list__link"
        >
          
                    
          <span
            class="fd-nested-list__title"
          >
            Level 1 Item
          </span>
          
                
        </a>
        
            
      </li>
      
            
      <li
        class="fd-nested-list__item"
      >
        
                
        <a
          class="fd-nested-list__link"
        >
          
                    
          <span
            class="fd-nested-list__title"
          >
            Level 1 Item
          </span>
          
                
        </a>
        
            
      </li>
      
        
    </ul>
    
    
  </nav>
  
    
  <nav
    aria-label="Utility Menu"
    class="fd-side-nav__utility"
  >
    
        
    <ul
      aria-label="Utility Menu"
      class="fd-nested-list fd-nested-list--text-only"
    >
      
            
      <li
        class="fd-nested-list__item"
      >
        
                
        <a
          class="fd-nested-list__link"
        >
          
                    
          <span
            class="fd-nested-list__title"
          >
            Level 1 Item
          </span>
          
                
        </a>
        
            
      </li>
      
            
      <li
        class="fd-nested-list__item"
      >
        
                
        <a
          class="fd-nested-list__link"
        >
          
                    
          <span
            class="fd-nested-list__title"
          >
            Level 1 Item
          </span>
          
                
        </a>
        
            
      </li>
      
        
    </ul>
    
    
  </nav>
  

</div>
`;

exports[`Storyshots Components/Side Navigation Group 1`] = `
<div
  class="fd-side-nav"
>
  
    
  <a
    class="fd-side-nav__skip-link"
    href="#content"
  >
    Skip navigation
  </a>
  
    
  <nav
    aria-label="Main Menu"
    class="fd-side-nav__main-navigation"
  >
    
        
    <ul
      class="fd-nested-list fd-nested-list--text-only"
    >
      
            
      <li
        class="fd-nested-list__item"
      >
        
                
        <a
          class="fd-nested-list__link"
          href="#"
        >
          
                    
          <span
            class="fd-nested-list__title"
          >
            Level 1 Item
          </span>
          
                
        </a>
        
            
      </li>
      
            
      <li
        class="fd-nested-list__item"
      >
        
                
        <a
          class="fd-nested-list__link is-selected"
          href="#"
        >
          
                    
          <span
            class="fd-nested-list__title"
          >
            Level 1 Item
          </span>
          
                
        </a>
        
            
      </li>
                  
            
      <li
        class="fd-nested-list__item"
      >
        
                
        <div
          class="fd-nested-list__content has-child"
        >
          
                    
          <a
            class="fd-nested-list__link"
            href="#"
          >
            
                        
            <span
              class="fd-nested-list__title"
            >
              Level 1 Item
            </span>
            
                    
          </a>
          
                    
          <button
            aria-controls="EX100L2"
            aria-expanded="false"
            aria-haspopup="true"
            aria-label="Expand submenu"
            class="fd-button fd-nested-list__button"
          >
            
                        
            <i
              class="sap-icon--navigation-right-arrow"
              role="presentation"
            />
                
                    
          </button>
          
                
        </div>
        
                
        <ul
          aria-hidden="true"
          class="fd-nested-list level-2"
          id="EX100L2"
        >
          
                    
          <li
            class="fd-nested-list__item"
          >
            
                        
            <a
              class="fd-nested-list__link"
              href="#"
            >
              
                            
              <span
                class="fd-nested-list__title"
              >
                Level 2 Item
              </span>
              
                        
            </a>
            
                    
          </li>
          
                    
          <li
            class="fd-nested-list__item"
          >
            
                        
            <a
              class="fd-nested-list__link"
              href="#"
            >
              
                            
              <span
                class="fd-nested-list__title"
              >
                Level 2 Item
              </span>
              
                        
            </a>
            
                    
          </li>
          
                    
          <li
            class="fd-nested-list__item"
          >
            
                        
            <a
              class="fd-nested-list__link"
              href="#"
            >
              
                            
              <span
                class="fd-nested-list__title"
              >
                Level 2 Item
              </span>
              
                        
            </a>
            
                    
          </li>
          
                
        </ul>
        
            
      </li>
      
            
      <li
        class="fd-nested-list__item"
      >
        
                
        <a
          class="fd-nested-list__link"
          href="#"
        >
          
                    
          <span
            class="fd-nested-list__title"
          >
            Level 1 Item
          </span>
          
                
        </a>
        
            
      </li>
      
            
      <li
        class="fd-nested-list__item"
      >
        
                
        <a
          class="fd-nested-list__link"
          href="#"
        >
          
                    
          <span
            class="fd-nested-list__title"
          >
            Level 1 Item
          </span>
          
                
        </a>
        
            
      </li>
      
        
    </ul>
    
    
  </nav>
  
    
  <nav
    aria-label="Utility Menu"
    class="fd-side-nav__utility"
  >
    
        
    <ul
      aria-label="Utility Menu"
      class="fd-nested-list fd-nested-list--text-only"
    >
      
            
      <li
        class="fd-nested-list__item"
      >
        
                
        <a
          class="fd-nested-list__link"
          href="#"
        >
          
                    
          <span
            class="fd-nested-list__title"
          >
            Level 1 Item
          </span>
          
                
        </a>
        
            
      </li>
      
            
      <li
        class="fd-nested-list__item"
      >
        
                
        <a
          class="fd-nested-list__link"
          href="#"
        >
          
                    
          <span
            class="fd-nested-list__title"
          >
            Level 1 Item
          </span>
          
                
        </a>
        
            
      </li>
      
        
    </ul>
    
    
  </nav>
  

</div>
`;

exports[`Storyshots Components/Side Navigation Icons 1`] = `
<div
  class="fd-side-nav"
>
  
    
  <a
    class="fd-side-nav__skip-link"
    href="#content"
  >
    Skip navigation
  </a>
  
    
  <nav
    aria-label="Main Menu"
    class="fd-side-nav__main-navigation"
  >
    
        
    <ul
      class="fd-nested-list"
    >
      
            
      <li
        class="fd-nested-list__item"
      >
        
                
        <a
          class="fd-nested-list__link"
          href="#"
        >
          
                    
          <i
            class="fd-nested-list__icon sap-icon--home"
            role="presentation"
          />
          
                    
          <span
            class="fd-nested-list__title"
          >
            Level 1 Item
          </span>
          
                
        </a>
        
            
      </li>
      
            
      <li
        class="fd-nested-list__item"
      >
        
                
        <a
          class="fd-nested-list__link is-selected"
          href="#"
        >
          
                    
          <i
            class="fd-nested-list__icon sap-icon--calendar"
            role="presentation"
          />
          
                    
          <span
            class="fd-nested-list__title"
          >
            Level 1 Item
          </span>
          
                
        </a>
        
            
      </li>
      
            
      <li
        class="fd-nested-list__item"
      >
        
                
        <a
          class="fd-nested-list__link"
          href="#"
        >
          
                    
          <i
            class="fd-nested-list__icon sap-icon--employee"
            role="presentation"
          />
          
                    
          <span
            class="fd-nested-list__title"
          >
            Level 1 Item
          </span>
          
                
        </a>
        
            
      </li>
      
            
      <li
        class="fd-nested-list__item"
      >
        
                
        <a
          class="fd-nested-list__link"
          href="#"
        >
          
                    
          <i
            class="fd-nested-list__icon sap-icon--activities"
            role="presentation"
          />
          
                    
          <span
            class="fd-nested-list__title"
          >
            Level 1 Item
          </span>
          
                
        </a>
        
            
      </li>
      
        
    </ul>
    
    
  </nav>
  
    
  <nav
    aria-label="Utility Menu"
    class="fd-side-nav__utility"
  >
    
        
    <ul
      class="fd-nested-list"
    >
      
            
      <li
        class="fd-nested-list__item"
      >
        
                
        <a
          class="fd-nested-list__link"
          href="#"
        >
          
                    
          <i
            class="fd-nested-list__icon sap-icon--compare"
            role="presentation"
          />
          
                    
          <span
            class="fd-nested-list__title"
          >
            Level 1 Item
          </span>
          
                
        </a>
        
            
      </li>
      
            
      <li
        class="fd-nested-list__item"
      >
        
                
        <a
          class="fd-nested-list__link"
          href="#"
        >
          
                    
          <i
            class="fd-nested-list__icon sap-icon--chain-link"
            role="presentation"
          />
          
                    
          <span
            class="fd-nested-list__title"
          >
            Level 1 Item
          </span>
          
                
        </a>
        
            
      </li>
      
        
    </ul>
    
    
  </nav>
  

</div>
`;

exports[`Storyshots Components/Side Navigation Nested List With Group Headers 1`] = `
<ul
  class="fd-nested-list"
>
  
    
  <li
    class="fd-nested-list__group-header"
  >
    
        Group Header 1
    
  </li>
  
    
  <li
    class="fd-nested-list__item"
  >
    
        
    <a
      class="fd-nested-list__link"
      href="#/"
    >
      
            
      <i
        class="fd-nested-list__icon sap-icon--home"
        role="presentation"
      />
      
            
      <span
        class="fd-nested-list__title"
      >
        Level 1 Item
      </span>
      
        
    </a>
    
    
  </li>
  
    
  <li
    class="fd-nested-list__item"
  >
    
        
    <a
      class="fd-nested-list__link is-selected"
      href="#/"
    >
      
            
      <i
        class="fd-nested-list__icon sap-icon--calendar"
        role="presentation"
      />
      
            
      <span
        class="fd-nested-list__title"
      >
        Level 1 Item
      </span>
      
        
    </a>
    
    
  </li>
  
    
  <li
    class="fd-nested-list__item"
  >
    
	   
    <div
      class="fd-nested-list__content has-child"
      tabindex="0"
    >
      
			
      <a
        class="fd-nested-list__link"
        href="#"
        tabindex="-1"
      >
        
				
        <i
          class="fd-nested-list__icon sap-icon--employee"
          role="presentation"
        />
        
				
        <span
          class="fd-nested-list__title"
        >
          Level 1 Item
        </span>
        
			
      </a>
      
            
      <button
        aria-controls="EX400L222"
        aria-expanded="true"
        aria-haspopup="true"
        aria-label="Expand submenu"
        class="fd-button fd-nested-list__button"
      >
        
                
        <i
          class="sap-icon--navigation-right-arrow"
          role="presentation"
        />
            
            
      </button>
      
		
    </div>
    
        
    <ul
      aria-hidden="false"
      class="fd-nested-list fd-nested-list--text-only level-2"
      id="EX400L222"
    >
      
            
      <li
        class="fd-nested-list__item"
      >
        
                
        <a
          class="fd-nested-list__link"
          href="#/"
        >
          
                    
          <span
            class="fd-nested-list__title"
          >
            Level 2 Item
          </span>
          
                
        </a>
        
            
      </li>
      
            
      <li
        class="fd-nested-list__item"
      >
        
			   
        <div
          class="fd-nested-list__content has-child"
          tabindex="0"
        >
          
					
          <a
            class="fd-nested-list__link"
            href="#"
            tabindex="-1"
          >
            
						
            <span
              class="fd-nested-list__title"
            >
              Level 2 Item
            </span>
            
					
          </a>
          
                    
          <button
            aria-controls="EX400L3"
            aria-expanded="true"
            aria-haspopup="true"
            aria-label="Expand submenu"
            class="fd-button fd-nested-list__button"
          >
            
                        
            <i
              class="sap-icon--navigation-right-arrow"
              role="presentation"
            />
                
                    
          </button>
          
				
        </div>
        
                
        <ul
          aria-hidden="false"
          class="fd-nested-list fd-nested-list--text-only level-3"
          id="EX400L3"
        >
          
                    
          <li
            class="fd-nested-list__item"
          >
            
                        
            <a
              class="fd-nested-list__link"
              href="#/"
            >
              
                            
              <span
                class="fd-nested-list__title"
              >
                Level 3 Item
              </span>
              
                        
            </a>
            
                    
          </li>
          
                    
          <li
            class="fd-nested-list__item"
          >
            
					   
            <div
              class="fd-nested-list__content has-child"
              tabindex="0"
            >
              
							
              <a
                class="fd-nested-list__link"
                href="#"
                tabindex="-1"
              >
                
								
                <span
                  class="fd-nested-list__title"
                >
                  Level 3 Item
                </span>
                
							
              </a>
              
                            
              <button
                aria-controls="EX400L4"
                aria-expanded="true"
                aria-haspopup="true"
                aria-label="Expand submenu"
                class="fd-button fd-nested-list__button"
              >
                
                                
                <i
                  class="sap-icon--navigation-right-arrow"
                  role="presentation"
                />
                    
                            
              </button>
              
						
            </div>
            
                        
            <ul
              aria-hidden="false"
              class="fd-nested-list fd-nested-list--text-only level-4"
              id="EX400L4"
            >
              
                            
              <li
                class="fd-nested-list__item"
              >
                
                                
                <a
                  class="fd-nested-list__link"
                  href="#/"
                >
                  
                                    
                  <span
                    class="fd-nested-list__title"
                  >
                    Level 4 Item
                  </span>
                  
                                
                </a>
                
                            
              </li>
              
                            
              <li
                class="fd-nested-list__item"
              >
                
                                
                <a
                  class="fd-nested-list__link"
                  href="#/"
                >
                  
                                    
                  <span
                    class="fd-nested-list__title"
                  >
                    Level 4 Item
                  </span>
                  
                                
                </a>
                
                            
              </li>
              
                            
              <li
                class="fd-nested-list__item"
              >
                
                                
                <a
                  class="fd-nested-list__link"
                  href="#/"
                >
                  
                                    
                  <span
                    class="fd-nested-list__title"
                  >
                    Level 4 Item
                  </span>
                  
                                
                </a>
                
                            
              </li>
              
                        
            </ul>
            
                    
          </li>
          
                    
          <li
            class="fd-nested-list__item"
          >
            
                        
            <a
              class="fd-nested-list__link"
              href="#/"
            >
              
                            
              <span
                class="fd-nested-list__title"
              >
                Level 3 Item
              </span>
              
                        
            </a>
            
                    
          </li>
          
                
        </ul>
        
            
      </li>
      
            
      <li
        class="fd-nested-list__item"
      >
        
                
        <a
          class="fd-nested-list__link"
          href="#/"
        >
          
                    
          <span
            class="fd-nested-list__title"
          >
            Level 2 Item
          </span>
          
                
        </a>
        
            
      </li>
      
        
    </ul>
    
    
  </li>
  
    
  <li
    class="fd-nested-list__item"
  >
    
        
    <a
      class="fd-nested-list__link"
      href="#/"
    >
      
            
      <i
        class="fd-nested-list__icon sap-icon--activities"
        role="presentation"
      />
      
            
      <span
        class="fd-nested-list__title"
      >
        Level 1 Item
      </span>
      
        
    </a>
    
    
  </li>
  
    
  <li
    class="fd-nested-list__group-header"
  >
    
        Group Header 2
    
  </li>
  
    
  <li
    class="fd-nested-list__item"
  >
    
        
    <a
      class="fd-nested-list__link"
      href="#/"
    >
      
            
      <i
        class="fd-nested-list__icon sap-icon--bar-chart"
        role="presentation"
      />
      
            
      <span
        class="fd-nested-list__title"
      >
        Level 1 Item
      </span>
      
        
    </a>
    
    
  </li>
  
    
  <li
    class="fd-nested-list__item"
  >
    
        
    <a
      class="fd-nested-list__link"
      href="#/"
    >
      
            
      <span
        class="fd-nested-list__title"
      >
        Level 1 Item
      </span>
      
        
    </a>
    
    
  </li>
  

</ul>
`;

exports[`Storyshots Components/Side Navigation Nested List With Group Headers Compact Mode 1`] = `
<ul
  class="fd-nested-list fd-nested-list--compact"
>
  
    
  <li
    class="fd-nested-list__group-header"
  >
    
        Group Header 1
    
  </li>
  
    
  <li
    class="fd-nested-list__item"
  >
    
        
    <a
      class="fd-nested-list__link"
      href="#/"
    >
      
            
      <i
        class="fd-nested-list__icon sap-icon--home"
        role="presentation"
      />
      
            
      <span
        class="fd-nested-list__title"
      >
        Level 1 Item
      </span>
      
        
    </a>
    
    
  </li>
  
    
  <li
    class="fd-nested-list__item"
  >
    
        
    <a
      class="fd-nested-list__link is-selected"
      href="#/"
    >
      
            
      <i
        class="fd-nested-list__icon sap-icon--calendar"
        role="presentation"
      />
      
            
      <span
        class="fd-nested-list__title"
      >
        Level 1 Item
      </span>
      
        
    </a>
    
    
  </li>
  
    
  <li
    class="fd-nested-list__item"
  >
    
	   
    <div
      class="fd-nested-list__content has-child"
      tabindex="0"
    >
      
			
      <a
        class="fd-nested-list__link"
        href="#"
        tabindex="-1"
      >
        
            	
        <i
          class="fd-nested-list__icon sap-icon--employee"
          role="presentation"
        />
        
				
        <span
          class="fd-nested-list__title"
        >
          Level 1 Item
        </span>
        
			
      </a>
      
            
      <button
        aria-controls="EX500L2"
        aria-expanded="true"
        aria-haspopup="true"
        aria-label="Expand submenu"
        class="fd-button fd-nested-list__button"
      >
        
                
        <i
          class="sap-icon--navigation-right-arrow"
          role="presentation"
        />
            
            
      </button>
      
		
    </div>
    
        
    <ul
      aria-hidden="false"
      class="fd-nested-list fd-nested-list--text-only level-2"
      id="EX500L2"
    >
      
            
      <li
        class="fd-nested-list__item"
      >
        
                
        <a
          class="fd-nested-list__link"
          href="#/"
        >
          
                    
          <span
            class="fd-nested-list__title"
          >
            Level 2 Item
          </span>
          
                
        </a>
        
            
      </li>
      
            
      <li
        class="fd-nested-list__item"
      >
        
			   
        <div
          class="fd-nested-list__content has-child"
          tabindex="0"
        >
          
					
          <a
            class="fd-nested-list__link"
            href="#"
            tabindex="-1"
          >
            
						
            <span
              class="fd-nested-list__title"
            >
              Level 2 Item
            </span>
            
					
          </a>
          
                    
          <button
            aria-controls="EX500L3"
            aria-expanded="true"
            aria-haspopup="true"
            aria-label="Expand submenu"
            class="fd-button fd-nested-list__button"
          >
            
                        
            <i
              class="sap-icon--navigation-right-arrow"
              role="presentation"
            />
                
                    
          </button>
          
				
        </div>
        
                
        <ul
          aria-hidden="false"
          class="fd-nested-list fd-nested-list--text-only level-3"
          id="EX500L3"
        >
          
                    
          <li
            class="fd-nested-list__item"
          >
            
                        
            <a
              class="fd-nested-list__link"
              href="#/"
            >
              
                            
              <span
                class="fd-nested-list__title"
              >
                Level 3 Item
              </span>
              
                        
            </a>
            
                    
          </li>
          
                    
          <li
            class="fd-nested-list__item"
          >
            
					   
            <div
              class="fd-nested-list__content has-child"
              tabindex="0"
            >
              
							
              <a
                class="fd-nested-list__link"
                href="#"
                tabindex="-1"
              >
                
								
                <span
                  class="fd-nested-list__title"
                >
                  Level 3 Item
                </span>
                
							
              </a>
              
                            
              <button
                aria-controls="EX500L4"
                aria-expanded="true"
                aria-haspopup="true"
                aria-label="Expand submenu"
                class="fd-button fd-nested-list__button"
              >
                
                                
                <i
                  class="sap-icon--navigation-right-arrow"
                  role="presentation"
                />
                    
                            
              </button>
              
						
            </div>
            
                        
            <ul
              aria-hidden="false"
              class="fd-nested-list fd-nested-list--text-only level-4"
              id="EX500L4"
            >
              
                            
              <li
                class="fd-nested-list__item"
              >
                
                                
                <a
                  class="fd-nested-list__link"
                  href="#/"
                >
                  
                                    
                  <span
                    class="fd-nested-list__title"
                  >
                    Level 4 Item
                  </span>
                  
                                
                </a>
                
                            
              </li>
              
                            
              <li
                class="fd-nested-list__item"
              >
                
                                
                <a
                  class="fd-nested-list__link"
                  href="#/"
                >
                  
                                    
                  <span
                    class="fd-nested-list__title"
                  >
                    Level 4 Item
                  </span>
                  
                                
                </a>
                
                            
              </li>
              
                            
              <li
                class="fd-nested-list__item"
              >
                
                                
                <a
                  class="fd-nested-list__link"
                  href="#/"
                >
                  
                                    
                  <span
                    class="fd-nested-list__title"
                  >
                    Level 4 Item
                  </span>
                  
                                
                </a>
                
                            
              </li>
              
                        
            </ul>
            
                    
          </li>
          
                    
          <li
            class="fd-nested-list__item"
          >
            
                        
            <a
              class="fd-nested-list__link"
              href="#/"
            >
              
                            
              <span
                class="fd-nested-list__title"
              >
                Level 3 Item
              </span>
              
                        
            </a>
            
                    
          </li>
          
                
        </ul>
        
            
      </li>
      
            
      <li
        class="fd-nested-list__item"
      >
        
                
        <a
          class="fd-nested-list__link"
          href="#/"
        >
          
                    
          <span
            class="fd-nested-list__title"
          >
            Level 2 Item
          </span>
          
                
        </a>
        
            
      </li>
      
        
    </ul>
    
    
  </li>
  
    
  <li
    class="fd-nested-list__item"
  >
    
        
    <a
      class="fd-nested-list__link"
      href="#/"
    >
      
            
      <i
        class="fd-nested-list__icon sap-icon--activities"
        role="presentation"
      />
      
            
      <span
        class="fd-nested-list__title"
      >
        Level 1 Item
      </span>
      
        
    </a>
    
    
  </li>
  
    
  <li
    class="fd-nested-list__group-header"
  >
    
        Group Header 2
    
  </li>
  
    
  <li
    class="fd-nested-list__item"
  >
    
        
    <a
      class="fd-nested-list__link"
      href="#/"
    >
      
            
      <i
        class="fd-nested-list__icon sap-icon--bar-chart"
        role="presentation"
      />
      
            
      <span
        class="fd-nested-list__title"
      >
        Level 1 Item
      </span>
      
        
    </a>
    
    
  </li>
  
    
  <li
    class="fd-nested-list__item"
  >
    
        
    <a
      class="fd-nested-list__link"
      href="#/"
    >
      
            
      <span
        class="fd-nested-list__title"
      >
        Level 1 Item
      </span>
      
        
    </a>
    
    
  </li>
  

</ul>
`;

exports[`Storyshots Components/Side Navigation Nested List With Icons Only In First Level 1`] = `
<ul
  class="fd-nested-list"
>
  
    
  <li
    class="fd-nested-list__item"
  >
    
        
    <a
      class="fd-nested-list__link"
      href="#/"
    >
      
            
      <i
        class="fd-nested-list__icon sap-icon--home"
        role="presentation"
      />
      
            
      <span
        class="fd-nested-list__title"
      >
        Level 1 Item
      </span>
      
        
    </a>
    
    
  </li>
  
    
  <li
    class="fd-nested-list__item"
  >
    
        
    <a
      class="fd-nested-list__link is-selected"
      href="#/"
    >
      
            
      <i
        class="fd-nested-list__icon sap-icon--calendar"
        role="presentation"
      />
      
            
      <span
        class="fd-nested-list__title"
      >
        Level 1 Item
      </span>
      
        
    </a>
    
    
  </li>
  
    
  <li
    class="fd-nested-list__item"
  >
    
	   
    <div
      class="fd-nested-list__content has-child is-expanded"
      tabindex="0"
    >
      
			
      <a
        class="fd-nested-list__link"
        href="#"
        tabindex="-1"
      >
        
				
        <i
          class="fd-nested-list__icon sap-icon--employee"
          role="presentation"
        />
        
				
        <span
          class="fd-nested-list__title"
        >
          Level 1 Item
        </span>
        
			
      </a>
      
            
      <button
        aria-controls="EX300L2"
        aria-expanded="true"
        aria-haspopup="true"
        aria-label="Expand submenu"
        class="fd-button fd-nested-list__button"
      >
        
                
        <i
          class="sap-icon--navigation-right-arrow"
          role="presentation"
        />
            
            
      </button>
      
		
    </div>
    
        
    <ul
      aria-hidden="false"
      class="fd-nested-list fd-nested-list--text-only level-2"
      id="EX300L2"
    >
      
            
      <li
        class="fd-nested-list__item"
      >
        
                
        <a
          class="fd-nested-list__link"
          href="#/"
        >
          
                    
          <span
            class="fd-nested-list__title"
          >
            Level 2 Item
          </span>
          
                
        </a>
        
            
      </li>
      
            
      <li
        class="fd-nested-list__item"
      >
        
			   
        <div
          class="fd-nested-list__content has-child"
          tabindex="0"
        >
          
					
          <a
            class="fd-nested-list__link"
            href="#"
            tabindex="-1"
          >
            
						
            <span
              class="fd-nested-list__title"
            >
              Level 2 Item
            </span>
            
					
          </a>
          
                    
          <button
            aria-controls="EX300L3"
            aria-expanded="true"
            aria-haspopup="true"
            aria-label="Expand submenu"
            class="fd-button fd-nested-list__button"
          >
            
                        
            <i
              class="sap-icon--navigation-right-arrow"
              role="presentation"
            />
                
                    
          </button>
          
				
        </div>
        
                
        <ul
          aria-hidden="false"
          class="fd-nested-list fd-nested-list--text-only level-3"
          id="EX300L3"
        >
          
                    
          <li
            class="fd-nested-list__item"
          >
            
                        
            <a
              class="fd-nested-list__link"
              href="#/"
            >
              
                            
              <span
                class="fd-nested-list__title"
              >
                Level 3 Item
              </span>
              
                        
            </a>
            
                    
          </li>
          
                    
          <li
            class="fd-nested-list__item"
          >
            
					   
            <div
              class="fd-nested-list__content has-child"
              tabindex="0"
            >
              
							
              <a
                class="fd-nested-list__link"
                href="#"
                tabindex="-1"
              >
                
								
                <span
                  class="fd-nested-list__title"
                >
                  Level 3 Item
                </span>
                
							
              </a>
              
                            
              <button
                aria-controls="EX300L4"
                aria-expanded="true"
                aria-haspopup="true"
                aria-label="Expand submenu"
                class="fd-button fd-nested-list__button"
              >
                
                                
                <i
                  class="sap-icon--navigation-right-arrow"
                  role="presentation"
                />
                    
                            
              </button>
              
						
            </div>
            
                        
            <ul
              aria-hidden="false"
              class="fd-nested-list fd-nested-list--text-only level-4"
              id="EX300L4"
            >
              
                            
              <li
                class="fd-nested-list__item"
              >
                
                                
                <a
                  class="fd-nested-list__link"
                  href="#/"
                >
                  
                                    
                  <span
                    class="fd-nested-list__title"
                  >
                    Level 4 Item
                  </span>
                  
                                
                </a>
                
                            
              </li>
              
                            
              <li
                class="fd-nested-list__item"
              >
                
                                
                <a
                  class="fd-nested-list__link"
                  href="#/"
                >
                  
                                    
                  <span
                    class="fd-nested-list__title"
                  >
                    Level 4 Item
                  </span>
                  
                                
                </a>
                
                            
              </li>
              
                            
              <li
                class="fd-nested-list__item"
              >
                
                                
                <a
                  class="fd-nested-list__link"
                  href="#/"
                >
                  
                                    
                  <span
                    class="fd-nested-list__title"
                  >
                    Level 4 Item
                  </span>
                  
                                
                </a>
                
                            
              </li>
              
                        
            </ul>
            
                    
          </li>
          
                    
          <li
            class="fd-nested-list__item"
          >
            
                        
            <a
              class="fd-nested-list__link"
              href="#/"
            >
              
                            
              <span
                class="fd-nested-list__title"
              >
                Level 3 Item
              </span>
              
                        
            </a>
            
                    
          </li>
          
                
        </ul>
        
            
      </li>
      
            
      <li
        class="fd-nested-list__item"
      >
        
                
        <a
          class="fd-nested-list__link"
          href="#/"
        >
          
                    
          <span
            class="fd-nested-list__title"
          >
            Level 2 Item
          </span>
          
                
        </a>
        
            
      </li>
      
        
    </ul>
    
    
  </li>
  
    
  <li
    class="fd-nested-list__item"
  >
    
        
    <a
      class="fd-nested-list__link"
      href="#/"
    >
      
            
      <i
        class="fd-nested-list__icon sap-icon--activities"
        role="presentation"
      />
      
            
      <span
        class="fd-nested-list__title"
      >
        Level 1 Item
      </span>
      
        
    </a>
    
    
  </li>
  
    
  <li
    class="fd-nested-list__item"
  >
    
        
    <a
      class="fd-nested-list__link"
      href="#/"
    >
      
            
      <i
        class="fd-nested-list__icon sap-icon--bar-chart"
        role="presentation"
      />
      
            
      <span
        class="fd-nested-list__title"
      >
        Level 1 Item
      </span>
      
        
    </a>
    
    
  </li>
  
    
  <li
    class="fd-nested-list__item"
  >
    
        
    <a
      class="fd-nested-list__link"
      href="#/"
    >
      
            
      <span
        class="fd-nested-list__title"
      >
        Level 1 Item
      </span>
      
        
    </a>
    
    
  </li>
  

</ul>
`;

exports[`Storyshots Components/Side Navigation Nested List Without Icons 1`] = `
<ul
  class="fd-nested-list fd-nested-list--text-only"
>
  
    
  <li
    class="fd-nested-list__item"
  >
    
        
    <a
      class="fd-nested-list__link"
      href="#/"
    >
      
            
      <span
        class="fd-nested-list__title"
      >
        Level 1 Item
      </span>
      
        
    </a>
    
    
  </li>
  
    
  <li
    class="fd-nested-list__item"
  >
    
        
    <a
      class="fd-nested-list__link is-selected"
      href="#/"
    >
      
            
      <span
        class="fd-nested-list__title"
      >
        Level 1 Item
      </span>
      
        
    </a>
    
    
  </li>
  
    
  <li
    class="fd-nested-list__item"
  >
    
	    
    <div
      class="fd-nested-list__content has-child is-expanded"
    >
      
			
      <a
        class="fd-nested-list__link"
        href="#"
      >
        
				
        <span
          class="fd-nested-list__title"
        >
          Level 1 Item
        </span>
        
            
      </a>
      
            
      <button
        aria-controls="EX100L25"
        aria-expanded="true"
        aria-haspopup="true"
        aria-label="Expand submenu"
        class="fd-button fd-nested-list__button"
      >
        
                    
        <i
          class="sap-icon--navigation-right-arrow"
          role="presentation"
        />
            
            
      </button>
      
		
    </div>
    
        
    <ul
      aria-hidden="false"
      class="fd-nested-list level-2"
      id="EX100L25"
    >
      
            
      <li
        class="fd-nested-list__item"
      >
        
                
        <a
          class="fd-nested-list__link"
          href="#/"
        >
          
                    
          <span
            class="fd-nested-list__title"
          >
            Level 2 Item
          </span>
          
                
        </a>
        
            
      </li>
      
            
      <li
        class="fd-nested-list__item"
      >
        
			   
        <div
          class="fd-nested-list__content has-child"
          tabindex="0"
        >
          
					
          <a
            class="fd-nested-list__link"
            href="#"
            tabindex="-1"
          >
            
						
            <span
              class="fd-nested-list__title"
            >
              Level 2 Item
            </span>
            
                    
          </a>
          
                    
          <button
            aria-controls="EX100L35"
            aria-expanded="true"
            aria-haspopup="true"
            aria-label="Expand submenu"
            class="fd-button fd-nested-list__button"
          >
            
                        
            <i
              class="sap-icon--navigation-right-arrow"
              role="presentation"
            />
                
                    
          </button>
          
				
        </div>
        
                
        <ul
          aria-hidden="false"
          class="fd-nested-list level-3"
          id="EX100L35"
        >
          
                    
          <li
            class="fd-nested-list__item"
          >
            
                        
            <a
              class="fd-nested-list__link"
              href="#/"
            >
              
                            
              <span
                class="fd-nested-list__title"
              >
                Level 3 Item
              </span>
              
                        
            </a>
            
                    
          </li>
          
                    
          <li
            class="fd-nested-list__item"
          >
            
					   
            <div
              class="fd-nested-list__content has-child"
              tabindex="0"
            >
              
							
              <a
                class="fd-nested-list__link"
                href="#"
                tabindex="-1"
              >
                
								
                <span
                  class="fd-nested-list__title"
                >
                  Level 3 Item
                </span>
                
							
              </a>
              
                            
              <button
                aria-controls="EX100L45"
                aria-expanded="true"
                aria-haspopup="true"
                aria-label="Expand submenu"
                class="fd-button fd-nested-list__button"
              >
                
                                
                <i
                  class="sap-icon--navigation-right-arrow"
                  role="presentation"
                />
                    
                            
              </button>
              
						
            </div>
            
                        
            <ul
              aria-hidden="false"
              class="fd-nested-list level-4"
              id="EX100L45"
            >
              
                            
              <li
                class="fd-nested-list__item"
              >
                
                                
                <a
                  class="fd-nested-list__link"
                  href="#/"
                >
                  
                                    
                  <span
                    class="fd-nested-list__title"
                  >
                    Level 4 Item
                  </span>
                  
                                
                </a>
                
                            
              </li>
              
                            
              <li
                class="fd-nested-list__item"
              >
                
							   
                <div
                  class="fd-nested-list__content has-child"
                  tabindex="0"
                >
                  
									
                  <a
                    class="fd-nested-list__link"
                    href="#"
                    tabindex="-1"
                  >
                    
										
                    <span
                      class="fd-nested-list__title"
                    >
                      Level 4 Item
                    </span>
                    
									
                  </a>
                  
                                    
                  <button
                    aria-controls="EX100L55"
                    aria-expanded="true"
                    aria-haspopup="true"
                    aria-label="Expand submenu"
                    class="fd-button fd-nested-list__button"
                  >
                    
                                        
                    <i
                      class="sap-icon--navigation-right-arrow"
                      role="presentation"
                    />
                        
                                    
                  </button>
                  
								
                </div>
                
                                
                <ul
                  aria-hidden="false"
                  class="fd-nested-list level-5"
                  id="EX100L55"
                >
                  
                                    
                  <li
                    class="fd-nested-list__item"
                  >
                    
                                        
                    <a
                      class="fd-nested-list__link"
                      href="#/"
                    >
                      
                                            
                      <span
                        class="fd-nested-list__title"
                      >
                        Level 5 Item
                      </span>
                      
                                        
                    </a>
                    
                                    
                  </li>
                  
                                    
                  <li
                    class="fd-nested-list__item"
                  >
                    
									   
                    <div
                      class="fd-nested-list__content has-child"
                      tabindex="0"
                    >
                      
											
                      <a
                        class="fd-nested-list__link"
                        href="#"
                        tabindex="-1"
                      >
                        
												
                        <span
                          class="fd-nested-list__title"
                        >
                          Level 5 Item
                        </span>
                        
											
                      </a>
                      
                                            
                      <button
                        aria-controls="EX100L65"
                        aria-expanded="true"
                        aria-haspopup="true"
                        aria-label="Expand submenu"
                        class="fd-button fd-nested-list__button"
                      >
                        
                                                
                        <i
                          class="sap-icon--navigation-right-arrow"
                          role="presentation"
                        />
                        
                                            
                      </button>
                      
										
                    </div>
                    
                                        
                    <ul
                      aria-hidden="false"
                      class="fd-nested-list level-6"
                      id="EX100L65"
                    >
                      
                                            
                      <li
                        class="fd-nested-list__item"
                      >
                        
                                                
                        <a
                          class="fd-nested-list__link"
                          href="#/"
                        >
                          
                                                    
                          <span
                            class="fd-nested-list__title"
                          >
                            Level 6 Item
                          </span>
                          
                                                
                        </a>
                        
                                            
                      </li>
                      
                                            
                      <li
                        class="fd-nested-list__item"
                      >
                        
                                                
                        <a
                          class="fd-nested-list__link"
                          href="#/"
                        >
                          
                                                    
                          <span
                            class="fd-nested-list__title"
                          >
                            Level 6 Item
                          </span>
                          
                                                
                        </a>
                        
                                            
                      </li>
                      
                                            
                      <li
                        class="fd-nested-list__item"
                      >
                        
                                                
                        <a
                          class="fd-nested-list__link"
                          href="#/"
                        >
                          
                                                    
                          <span
                            class="fd-nested-list__title"
                          >
                            Level 6 Item
                          </span>
                          
                                                
                        </a>
                        
                                            
                      </li>
                      
                                        
                    </ul>
                    
                                    
                  </li>
                  
                                    
                  <li
                    class="fd-nested-list__item"
                  >
                    
                                        
                    <a
                      class="fd-nested-list__link"
                      href="#/"
                    >
                      
                                            
                      <span
                        class="fd-nested-list__title"
                      >
                        Level 5 Item
                      </span>
                      
                                        
                    </a>
                    
                                    
                  </li>
                  
                                
                </ul>
                
                            
              </li>
              
                            
              <li
                class="fd-nested-list__item"
              >
                
                                
                <a
                  class="fd-nested-list__link"
                  href="#/"
                >
                  
                                    
                  <span
                    class="fd-nested-list__title"
                  >
                    Level 4 Item
                  </span>
                  
                                
                </a>
                
                            
              </li>
              
                        
            </ul>
            
                    
          </li>
          
                    
          <li
            class="fd-nested-list__item"
          >
            
                        
            <a
              class="fd-nested-list__link"
              href="#/"
            >
              
                            
              <span
                class="fd-nested-list__title"
              >
                Level 3 Item
              </span>
              
                        
            </a>
            
                    
          </li>
          
                
        </ul>
        
            
      </li>
      
            
      <li
        class="fd-nested-list__item"
      >
        
                
        <a
          class="fd-nested-list__link"
          href="#/"
        >
          
                    
          <span
            class="fd-nested-list__title"
          >
            Level 2 Item
          </span>
          
                
        </a>
        
            
      </li>
      
        
    </ul>
    
    
  </li>
  
    
  <li
    class="fd-nested-list__item"
  >
    
        
    <a
      class="fd-nested-list__link"
      href="#/"
    >
      
            
      <span
        class="fd-nested-list__title"
      >
        Level 1 Item
      </span>
      
        
    </a>
    
    
  </li>
  
    
  <li
    class="fd-nested-list__item"
  >
    
        
    <a
      class="fd-nested-list__link"
      href="#/"
    >
      
            
      <span
        class="fd-nested-list__title"
      >
        Level 1 Item
      </span>
      
        
    </a>
    
    
  </li>
  

</ul>
`;

exports[`Storyshots Components/Side Navigation Nested List Without Links 1`] = `
<ul
  class="fd-nested-list fd-nested-list--compact"
>
  
    
  <li
    class="fd-nested-list__group-header"
  >
    
        Group Header 1
    
  </li>
  
    
  <li
    class="fd-nested-list__item"
  >
    
        
    <div
      class="fd-nested-list__content"
    >
      
            
      <i
        class="fd-nested-list__icon sap-icon--home"
        role="presentation"
      />
      
            
      <span
        class="fd-nested-list__title"
      >
        Level 1 Item
      </span>
      
        
    </div>
    
    
  </li>
  
    
  <li
    class="fd-nested-list__item"
  >
    
        
    <div
      class="fd-nested-list__content is-selected"
    >
      
            
      <i
        class="fd-nested-list__icon sap-icon--calendar"
        role="presentation"
      />
      
            
      <span
        class="fd-nested-list__title"
      >
        Level 1 Item
      </span>
      
        
    </div>
    
    
  </li>
  
    
  <li
    class="fd-nested-list__item"
  >
    
	   
    <div
      class="fd-nested-list__content has-child"
      tabindex="0"
    >
      
            
      <i
        class="fd-nested-list__icon sap-icon--employee"
        role="presentation"
      />
      
			
      <span
        class="fd-nested-list__title"
      >
        Level 1 Item
      </span>
      
            
      <button
        aria-controls="EX600L2"
        aria-expanded="true"
        aria-haspopup="true"
        aria-label="Expand submenu"
        class="fd-button fd-nested-list__button"
      >
        
                
        <i
          class="sap-icon--navigation-right-arrow"
          role="presentation"
        />
            
            
      </button>
      
		
    </div>
    
        
    <ul
      aria-hidden="false"
      class="fd-nested-list fd-nested-list--text-only level-2"
      id="EX600L2"
    >
      
            
      <li
        class="fd-nested-list__item"
      >
        
                
        <div
          class="fd-nested-list__content"
        >
          
                    
          <span
            class="fd-nested-list__title"
          >
            Level 2 Item
          </span>
          
                
        </div>
        
            
      </li>
      
            
      <li
        class="fd-nested-list__item"
      >
        
			   
        <div
          class="fd-nested-list__content has-child"
          tabindex="0"
        >
          
					
          <span
            class="fd-nested-list__title"
          >
            Level 2 Item
          </span>
          
                    
          <button
            aria-controls="EX600L3"
            aria-expanded="true"
            aria-haspopup="true"
            aria-label="Expand submenu"
            class="fd-button fd-nested-list__button"
          >
            
                        
            <i
              class="sap-icon--navigation-right-arrow"
              role="presentation"
            />
                
                    
          </button>
          
				
        </div>
        
                
        <ul
          aria-hidden="false"
          class="fd-nested-list fd-nested-list--text-only level-3"
          id="EX600L3"
        >
          
                    
          <li
            class="fd-nested-list__item"
          >
            
                        
            <div
              class="fd-nested-list__content"
            >
              
                            
              <span
                class="fd-nested-list__title"
              >
                Level 3 Item
              </span>
              
                        
            </div>
            
                    
          </li>
          
                    
          <li
            class="fd-nested-list__item"
          >
            
					   
            <div
              class="fd-nested-list__content has-child"
              tabindex="0"
            >
              
							
              <span
                class="fd-nested-list__title"
              >
                Level 3 Item
              </span>
              
                            
              <button
                aria-controls="EX600L4"
                aria-expanded="true"
                aria-haspopup="true"
                aria-label="Expand submenu"
                class="fd-button fd-nested-list__button"
              >
                
                                
                <i
                  class="sap-icon--navigation-right-arrow"
                  role="presentation"
                />
                    
                            
              </button>
              
						
            </div>
            
                        
            <ul
              aria-hidden="false"
              class="fd-nested-list fd-nested-list--text-only level-4"
              id="EX600L4"
            >
              
                            
              <li
                class="fd-nested-list__item"
              >
                
                                
                <div
                  class="fd-nested-list__content"
                >
                  
                                    
                  <span
                    class="fd-nested-list__title"
                  >
                    Level 4 Item
                  </span>
                  
                                
                </div>
                
                            
              </li>
              
                            
              <li
                class="fd-nested-list__item"
              >
                
                                
                <div
                  class="fd-nested-list__content"
                >
                  
                                    
                  <span
                    class="fd-nested-list__title"
                  >
                    Level 4 Item
                  </span>
                  
                                
                </div>
                
                            
              </li>
              
                            
              <li
                class="fd-nested-list__item"
              >
                
                                
                <div
                  class="fd-nested-list__content"
                >
                  
                                    
                  <span
                    class="fd-nested-list__title"
                  >
                    Level 4 Item
                  </span>
                  
                                
                </div>
                
                            
              </li>
              
                        
            </ul>
            
                    
          </li>
          
                    
          <li
            class="fd-nested-list__item"
          >
            
                        
            <div
              class="fd-nested-list__content"
            >
              
                            
              <span
                class="fd-nested-list__title"
              >
                Level 3 Item
              </span>
              
                        
            </div>
            
                    
          </li>
          
                
        </ul>
        
            
      </li>
      
            
      <li
        class="fd-nested-list__item"
      >
        
                
        <div
          class="fd-nested-list__content"
        >
          
                    
          <span
            class="fd-nested-list__title"
          >
            Level 2 Item
          </span>
          
                
        </div>
        
            
      </li>
      
        
    </ul>
    
    
  </li>
  
    
  <li
    class="fd-nested-list__item"
  >
    
        
    <div
      class="fd-nested-list__content"
    >
      
            
      <i
        class="fd-nested-list__icon sap-icon--activities"
        role="presentation"
      />
      
            
      <span
        class="fd-nested-list__title"
      >
        Level 1 Item
      </span>
      
        
    </div>
    
    
  </li>
  
    
  <li
    class="fd-nested-list__group-header"
  >
    
        Group Header 2
    
  </li>
  
    
  <li
    class="fd-nested-list__item"
  >
    
        
    <div
      class="fd-nested-list__content"
    >
      
            
      <i
        class="fd-nested-list__icon sap-icon--bar-chart"
        role="presentation"
      />
      
            
      <span
        class="fd-nested-list__title"
      >
        Level 1 Item
      </span>
      
        
    </div>
    
    
  </li>
  
    
  <li
    class="fd-nested-list__item"
  >
    
        
    <div
      class="fd-nested-list__content"
    >
      
            
      <span
        class="fd-nested-list__title"
      >
        Level 1 Item
      </span>
      
        
    </div>
    
    
  </li>
  

</ul>
`;
